# youtube-search-python

./: README.md  asyncExample.py  pyproject.toml  setup.py  syncExample.py
tests/async/: extras.py
tests/sync/: extras.py
youtubesearchpython/: __init__.py  extras.py
youtubesearchpython/__future__/: README.md  __init__.py  extras.py
youtubesearchpython/core/: channel.py  componenthandler.py  constants.py  requests.py  video.py
